device_icons = [
  'bluetooth.xpm',
  'burner.xpm',
  'camera.xpm',
  'cdrom.xpm',
  'floppy.xpm',
  'harddisk.xpm',
  'ipod.xpm',
  'pci.xpm',
  'removable-1394.xpm',
  'removable-usb.xpm',
  'removable.xpm',
  'usb.xpm',
  'wavelan-encrypted.xpm',
  'wavelan.xpm',
  'zip.xpm'
]

install_data(device_icons,
  install_dir: pixmaps_dir / 'device-icons'
)
