device_icons = [
  'bluetooth.png',
  'burner.png',
  'camera.png',
  'cdrom.png',
  'floppy.png',
  'harddisk.png',
  'ipod.png',
  'pci.png',
  'removable-1394.png',
  'removable-usb.png',
  'removable.png',
  'usb.png',
  'wavelan-encrypted.png',
  'wavelan.png',
  'zip.png'
]

install_data(device_icons,
  install_dir: pixmaps_dir / 'device-icons'
)
