## Process this file with automake to produce Makefile.in

pixmapsdir = $(datadir)/pixmaps/@PACKAGE@/file-type-icons
pixmaps_DATA = \
	file_type_dir.xpm \
	file_type_dir_green.xpm \
	file_type_dir_orange.xpm \
	file_type_dir_red.xpm \
	file_type_symlink_to_dir_green.xpm \
	file_type_symlink_to_dir_orange.xpm \
	file_type_symlink_to_dir_red.xpm \
	file_type_unknown.xpm \
	file_type_socket.xpm \
	file_type_block_device.xpm \
	file_type_fifo.xpm \
	file_type_symlink.xpm \
	file_type_char_device.xpm \
	file_type_regular.xpm

EXTRA_DIST = $(pixmaps_DATA)


-include $(top_srcdir)/git.mk
