mime_icons = [
  'gnome-application-msword.png',
  'gnome-application-pdf.png',
  'gnome-application-postscript.png',
  'gnome-application-vnd.ms-excel.png',
  'gnome-application-vnd.ms-powerpoint.png',
  'gnome-application-vnd.sun.xml.calc.png',
  'gnome-application-vnd.sun.xml.draw.png',
  'gnome-application-vnd.sun.xml.impress.png',
  'gnome-application-vnd.sun.xml.writer.math.png',
  'gnome-application-vnd.sun.xml.writer.png',
  'gnome-application-x-anjuta-project.png',
  'gnome-application-x-arj.png',
  'gnome-application-x-bzip-compressed-tar.png',
  'gnome-application-x-bzip.png',
  'gnome-application-x-compressed-tar.png',
  'gnome-application-x-compressed.png',
  'gnome-application-x-dia-diagram.png',
  'gnome-application-x-executable-binary.png',
  'gnome-application-x-glade.png',
  'gnome-application-x-gnumeric.png',
  'gnome-application-x-gzip.png',
  'gnome-application-x-mrproject.png',
  'gnome-application-x-ogg.png',
  'gnome-application-x-rpm.png',
  'gnome-application-zip.png',
  'gnome-audio-plain.png',
  'gnome-audio-x-mp3.png',
  'gnome-compressed.png',
  'gnome-image-plain.png',
  'gnome-text-html.png',
  'gnome-text-plain.png',
  'gnome-text-x-c-header.png',
  'gnome-text-x-c.png',
  'gnome-text-x-sh.png',
  'gnome-video-plain.png',
  'gnome-x-directory-smb-server.png',
  'gnome-x-directory-smb-workgroup.png',
  'i-directory.png',
  'i-music.png',
  'i-regular.png',
  'i-symlink.png'
]

install_data(mime_icons,
  install_dir: pixmaps_dir / 'mime-icons'
)
